[package]
name = "sm9_core"
version = "0.1.0"
edition = "2021"
authors = ["John Yu <cb8866@sina.com>"]
description = "SM9,Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["SM9","pairing","crypto","cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", default-features = false }
byteorder = { version = "1", features = ["i128"], default-features = false }
crunchy = "0.2.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hex-literal = "0.4.1"

[dev-dependencies]
rand = "0.8.5"