[package]
name = "sm9_core"
version = "0.3.1"
edition = "2021"
authors = ["John Yu <cb8866@sina.com>"]
description = "SM9,Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["SM9","pairing","crypto","dentity-based","cryptography"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/John-Yu/SM9_core"
documentation = "https://docs.rs/sm9_core/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", default-features = false }
byteorder = { version = "1", features = ["i128"], default-features = false }
crunchy = "0.2.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
hex-literal = "0.4.1"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "my_benchmark"
harness = false
