[package]
name = "sm9_core"
version = "0.4.1"
edition = "2021"
authors = ["John Yu <cb8866@sina.com>"]
description = "SM9, identity-based cryptography"
keywords = ["SM9", "pairing", "crypto", "cryptography", "shangmi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/John-Yu/SM9_core"
documentation = "https://docs.rs/sm9_core/"
readme = "README.md"
categories = ["cryptography", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.5.0", features = ["asm"] }
rand = { version = "0.8.5", default-features = false }
byteorder = { version = "1", features = ["i128"], default-features = false }
crunchy = "0.2.2"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
hex-literal = "0.4.1"
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "my_benchmark"
harness = false
